examples/errors/multiple_errors.aaa
fn
    foo
{
    5
}


fn
    bar
{
    5
}


fn
    main
{
    nop
}
